Replaced deprecated Integer constructors